--- a/src/main/webapp/layout/left.html
+++ b/src/main/webapp/layout/left.html
@@ -135,6 +135,14 @@
                             <div class="chartBorder">
                                 <h3 id="professional_code_div">覆盖专业领域：0</h3>
                                 <div class="myChart">
+                                    <div class="myChart_header">各专业领域覆盖实验室数</div>
+                                    <ul class="myChart_num">
+                                        <li>24</li>
+                                        <li>321</li>
+                                        <li>223</li>
+                                        <li>11</li>
+                                        <li>341</li>
+                                    </ul>
                                     <img src="${contextPath!}/static/img/flatRT_text.png">
 
                                 </div>
