--- a/src/main/webapp/layout/centerLab.html
+++ b/src/main/webapp/layout/centerLab.html
@@ -708,7 +708,7 @@
 
 <script src="../static/asserts/js/jquery-2.2.4.js"></script>
 <script src="../static/asserts/echarts/echarts-3.5.2.js"></script>
-<script src="../static/js/manyEcharts.js"></script>
+<!--<script src="../static/js/manyEcharts.js"></script>-->
 
 <script src="../static/js/centerLab.js"></script>
 <script>
