--- a/src/main/webapp/layout/ulab.html
+++ b/src/main/webapp/layout/ulab.html
@@ -20,7 +20,7 @@
         var bodyFontSize = pageH / 595 * 100 + "%";
         bodyScale = pageH / 595;
         $("body").css("font-size", bodyFontSize);
-        console.log("UUUUUUUUUU~~~~~~~~~~窗口高度：" + pageH + ",\n宽度:"+pageW+" \nbody字号：" + bodyFontSize)
+//        console.log("UUUUUUUUUU~~~~~~~~~~窗口高度：" + pageH + ",\n宽度:"+pageW+" \nbody字号：" + bodyFontSize)
     }
     pageResize();
 </script>
