--- a/src/main/webapp/static/css/index_right.css
+++ b/src/main/webapp/static/css/index_right.css
@@ -546,10 +546,12 @@
 }
 .total_bottom_tab select{
     background-color: transparent;
+    border: 1px solid #66CCFE;
 }
-.shuju_apply_top .total_bottom_tab{
-	height: 65%;
+.total_bottom_tab select .optgroup{
+    height: 50px;
 }
+
 .tab4 .total_bottom_tab {
     margin-left: .1%;
 }
@@ -659,12 +661,14 @@
 
 .sheshi_title {
     position: absolute;
-    top: 0;
+    top: 0.3%;
     left: 3%;
     color: white;
     font-size: 1.2em;
 }
-
+.sheshi_bottom .sheshi_title{
+    font-size: 1em;
+}
 .sheshi_top_left {
     flex: 1;
     background: url("../img/sheshiState/border .png") no-repeat;
@@ -1413,8 +1417,16 @@
     text-align: center;
     width: 100%;
     height: 100%;
+    position: relative;
 }
-
+.shuju_apply_top .total_bottom_tab{
+    position: absolute;
+    left: 28%;
+    width: 11%;
+    height: 62%;
+    background-color: transparent;
+    z-index: 100;
+}
 .shuju_apply_center {
     flex: 1;
 }
