--- a/src/main/webapp/static/css/labLine.css
+++ b/src/main/webapp/static/css/labLine.css
@@ -65,11 +65,12 @@
     background-size: 100% 100%;
 }
 .sheshi_tab_list{
-    height: 50%;
+    height:60%;
     width: 58%;
     overflow: hidden;
     margin: 0 auto;
     margin-top: 3%;
+
 }
 .sheshi_tab_list>ul{
     width: 100%;
@@ -78,34 +79,34 @@
     /*padding-left: 10%;*/
     background: url("../img/labMain/dropmenu.png") no-repeat;
     background-size: 100% 100%;
+
 }
 .sheshi_tab_list>ul>li{
     width: 100%;
     height: auto;
-    margin-left: 2%;
     text-align: left;
     position: relative;
     padding-top: 5%;
 
 }
 .sheshi_tab_list>ul>li a{
-    margin-left: 19%;
+    margin-left: 23%;
 }
 .sheshi_tab_list>ul>li>span{
     display: inline-block;
     width: 1.4em;
     height: 1.4em;
     vertical-align: middle;
-    margin-right: 5%;
+    /*margin-right: 5%;*/
     background: url("../img/labMain/sb.png") no-repeat;
     background-size: 100% 100%;
     position: absolute;
-    top:32%;
-    left: 5%;
+    /*top:32%;*/
+    left: 9%;
 }
-.sheshi_tab_list>ul>li:hover span{
-    top: 0;
-}
+/*.sheshi_tab_list>ul>li:hover span{*/
+    /*top: 0;*/
+/*}*/
 .sheshi_tab_list>ul>li>span a{
     font-size: 1em;
 }
@@ -135,30 +136,38 @@
     width: 100%;
 }
 
-.taiwei_hide{
-    display: none;
-}
-.sheshi_tab_list>ul>li:hover{
-    height: auto;
-}
-.sheshi_tab_list>ul>li:hover a{
-    color: #66ffcc;
-}
-.sheshi_tab_list>ul>li:hover .taiwei_hide{
-    display: block;
-}
-.sheshi_tab_list>ul>li:hover span{
-    top:5%;
-}
+
+/*.sheshi_tab_list>ul>li:hover{*/
+    /*height: auto;*/
+/*}*/
+/*.sheshi_tab_list>ul>li:hover a{*/
+    /*color: #66ffcc;*/
+/*}*/
+/*.sheshi_tab_list>ul>li:hover .taiwei_hide{*/
+    /*display: block;*/
+/*}*/
+/*.sheshi_tab_list>ul>li:hover span{*/
+    /*top:5%;*/
+/*}*/
 .taiwei_hide li{
-    display: inline-block;
     width: 100%;
     background-color: rgba(102,204,254,0.2);
     padding-left: 20%;
+    display: inline-block;
 }
 .taiwei_hide li:hover{
-    /*background-color: #66ccff;*/
+    background-color: #66ccff;
     color: white;
     border-bottom: 1px solid white;
     border-top: 1px solid white;
+}
+.taiwei_hide_active{
+    background-color: #66ccff;
+    color: white;
+    border-bottom: 1px solid white;
+    border-top: 1px solid white;
+    display: block;
+}
+.taiwei_hide{
+    display: none;
 }
