--- a/src/main/webapp/static/css/labLine.css
+++ b/src/main/webapp/static/css/labLine.css
@@ -140,9 +140,9 @@
 /*.sheshi_tab_list>ul>li:hover{*/
     /*height: auto;*/
 /*}*/
-/*.sheshi_tab_list>ul>li:hover a{*/
-    /*color: #66ffcc;*/
-/*}*/
+.sheshi_tab_list>ul>li:hover a{
+    color: #66ffcc;
+}
 /*.sheshi_tab_list>ul>li:hover .taiwei_hide{*/
     /*display: block;*/
 /*}*/
@@ -154,6 +154,7 @@
     background-color: rgba(102,204,254,0.2);
     padding-left: 20%;
     display: inline-block;
+    cursor: pointer;
 }
 .taiwei_hide li:hover{
     background-color: #66ccff;
@@ -161,6 +162,7 @@
     border-bottom: 1px solid white;
     border-top: 1px solid white;
 }
+
 .taiwei_hide_active{
     background-color: #66ccff;
     color: white;
