--- a/src/main/webapp/layout/centerLab.html
+++ b/src/main/webapp/layout/centerLab.html
@@ -272,12 +272,12 @@
                             <span class="data" id="lab_center_id_left_4">0</span>
                         </div>
                         <div class="item2">
-                            <h5>完好设备数：<span></span></h5>
-                            <span class="data" id="lab_center_id_left_5"></span>
-                        </div>
-                        <div class="item3">
-                            <h5>设备故障台次：<span></span></h5>
+                            <h5>当年故障数：<span></span></h5>
                             <span class="data" id="lab_center_id_left_6"></span>
+                        </div>
+                         <div class="item3">
+                            <h5>当前完好数：<span></span></h5>
+                            <span class="data" id="lab_center_id_left_5"></span>
                         </div>
                         <div class="item4" id="lab_center_id_left_7">
                             <h5>当前完好率：<span></span></h5>
