--- a/src/main/webapp/layout/left.html
+++ b/src/main/webapp/layout/left.html
@@ -118,10 +118,10 @@
 -->
                                 <div class="myChart"></div>
                                 <!--<p><span>P1</span><span>P2</span><span>P3</span><span>P4</span><span>P5</span></p>-->
-                                <div class="added"><span>a：p1对比试验</span>&emsp;<span>b：p2新品调试</span>
+                                <div class="added"><span>a：P1对比试验</span>&emsp;<span>b：P2新品调试</span>
                                     <br>
-                                    <span>c：p3新品确认</span>&emsp;<span>d,e：p4小批验证 入厂/出厂</span>
-                                    <span>f,g：p5年度型检 监督抽测</span></div>
+                                    <span>c：P3新品确认</span>&emsp;<span>d,e：P4小批验证 入厂/出厂</span>
+                                    <span>f,g：P5年度型检 监督抽测</span></div>
                             </div>
                         </div>
                     </div>
