--- a/src/main/webapp/layout/tab/tab2.html
+++ b/src/main/webapp/layout/tab/tab2.html
@@ -417,7 +417,7 @@
                     </div>
                     <div class="biaozhun_total">
                         <ul>
-                            <li>牵头/参与起草数</li>
+                            <li>起草数</li>
                             <li id="tab1_qtqc_id">0</li>
                         </ul>
                     </div>
