--- a/src/main/webapp/layout/centerLab.html
+++ b/src/main/webapp/layout/centerLab.html
@@ -66,7 +66,7 @@
               </div>
             <!--labMain_lunbo-->
             
-            <div class="labMain_cblt_ttwo"> <img src="${contextPath!}/static/img/labMain/labmain_04.gif"/> </div>
+            <div class="labMain_cblt_ttwo"> <img src="${contextPath!}/static/img/labMain/znjd.gif"/> </div>
             <!--labMain_cblt_ttwo--> 
 
       
@@ -590,7 +590,7 @@
             <h3 class="lab_title shishijiance">实时监测</h3>
             <div class="shishi_left">
                 <div class="sheshi_tab">视频监控</div>
-                <div class="sheshi_tab">曲线监控</div>
+                <div class="sheshi_tab sheshi_tab_active">曲线监控</div>
                 <div class="sheshi_tab_list">
                     <ul id="lab_unit_selected_center">
                        <!--  <li><span></span><a href="#">实验室1</a>
@@ -639,7 +639,11 @@
                 <div class="sheshi_right_left">
                     <div id="main1"></div>
                     <div id="main2"></div>
+                    <div class="message_box">
+                        <div>该台位未开测</div>
+                    </div>
                 </div>
+
                 <div class="sheshi_right_right">
                     <ul id="legend_ul">
                     </ul>
