--- a/src/main/webapp/layout/tab/tab1.html
+++ b/src/main/webapp/layout/tab/tab1.html
@@ -156,11 +156,11 @@
         </div>
         <div class="total_center_3">
             <div class="echarts_title">订单及时率</div>
-            <h3 id="tab1_order_js_compare"><!-- 当年订单及时率<span class="orange bigger">79.39%，</span>同比上升<span class="orange bigger">4.5%</span> --></h3>
+            <h3 id="tab1_order_js_compare" style="font-size: 1.1em"><!-- 当年订单及时率<span class="orange bigger">79.39%，</span>同比上升<span class="orange bigger">4.5%</span> --></h3>
             <div id="myChart6"></div>
         </div>
         <div class="total_center_4">
-            <div class="echarts_title">用户满意度</div>
+            <div class="echarts_title" style="font-size: 1.1em">用户满意度</div>
             <h3 id="tab1_use_my_title"></h3>
             <div id="myChart7"></div>
         </div>
