--- a/src/main/webapp/static/css/labAnalysis.css
+++ b/src/main/webapp/static/css/labAnalysis.css
@@ -54,7 +54,7 @@
 	color:#fff;
 	margin-top:4%;
 	text-align:center;
-	font-size:1.1em;
+	font-size:1.3em;
 	
 	}
 	
@@ -80,8 +80,8 @@
 }	
 .la_datal_legend ul {
 	height:90%;
-	margin:4% 1% 1% 5%;
-	
+	margin:4% 0 1% 5%;
+	font-size: 1.1em;
 	
 }	
 	
