--- a/src/main/webapp/static/css/index_left.css
+++ b/src/main/webapp/static/css/index_left.css
@@ -128,16 +128,17 @@
     padding: .5% 0 .3% 5%;
 }
 #l h1:nth-of-type(2){
-    font-size: 1.7em;
+    font-size: 1.9em;
     /*padding-left: 2%;*/
+    padding-top: 0.5em;
 }
 #l header .mainLogo{
     display: inline-block;
     position: absolute;
-    width: 4.5%;
-    height: 3.63%;
+    width: 6%;
+    height: 5%;
     top: 1.8%;
-    left: 36.5%;
+    left: 35%;
     background: url(../img/logo_haier.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -203,7 +204,9 @@
 #l .sphere-right-bottom .chartBorder{
     padding:0 5%;
 }
-
+#l .sphere-right-bottom .chartBorder .scroll{
+    font-size: 0.95em;
+}
 
 #l .sphere-right-top .chartBorder .myChart{
     height: 90%;
@@ -216,7 +219,7 @@
     width: auto;
     left: -17%;
     top: 2.5%;
-    font-size: 1.2em;
+    font-size: 1.3em;
     color: #fff;
 }
 #l .sphere-right-bottom .chartBorder h3{
