--- a/src/main/webapp/static/css/index_left.css
+++ b/src/main/webapp/static/css/index_left.css
@@ -116,8 +116,7 @@
 }
 #l h1{
     position: relative;
-
-    font-size: 2em;
+    font-size: 2.5em;
     letter-spacing: .05em;
     line-height: 1.2em;
     color: #66CCFE;
@@ -381,6 +380,7 @@
 }
 #l .flat-footer .legend .selectAll label{
     cursor: pointer;
+    width: 11em;
 }
 #l .flat-footer .legend .selectAll .icon{
     background-image: url("../img/ico/navSelectAll_on.png");
@@ -397,8 +397,6 @@
 #l .flat-footer .legend ul.lab,
 #l .flat-footer .legend ul.line{
     text-align: center;
-
-    margin-bottom: 1%;
 }
 
 #l .flat-footer .legend ul.legend-bottom{
@@ -411,15 +409,17 @@
 }
 #l .flat-footer .legend ul li{
     display: inline-block;
-    margin: 0 1%;
+    padding: 0.5% 1%;
 }
 #l .flat-footer .legend ul li a{
     /*font-size: 90%;*/
     color: #999;
+    display: inline-block;
 }
 #l .flat-footer .legend ul li.active a{
     text-decoration: none;
     color: #00e673;
+    display: inline-block;
 }
 #l .flat-footer .legend ul.lab li:nth-child(1).active a{
     color: #00e673;
