--- a/src/main/webapp/static/css/common.css
+++ b/src/main/webapp/static/css/common.css
@@ -80,8 +80,9 @@ h3 {
   display: flex;
   width:3186px;
   height:100%;
-  background: url("../img/bg_star2.jpg") ;
-  background-size: 100%;
+  /*background: url("../img/bg_star2.jpg") ;*/
+  /*background-size: 100%;*/
+  background-color: #030b24;
 }
 @media (min-width: 13000px) {
   #content{
