整体边框问题

--- a/src/main/webapp/WEB-INF/pages/layout/centerLab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/centerLab.html
@@ -19,7 +19,7 @@
         <h1>中海博睿数据中心</h1>
         <div class="labMain_ct_btn">
             <div class="icon"></div>
-            <h3>返回总状态</h3>
+            <h3>返回上一级</h3>
         </div>
         <div class="labMain_ct_btn">
             <div class="icon"></div>
